@@ -1,5 +1,16 @@
 1.3-18
 
+* gamm modifed so that weights dealt with properly if lme type varFunc 
+  used. This is only possible in the non-generalized case, as gamm.Rd 
+  now clarifies.
+
+* slight modification to s() to add `width.cutoff=500' to `deparse'
+
+* by variables not handled properly in p-spline example in 
+  smooth.construct.Rd - fixed.
+
+* bug fix in summary.gam.Rd example (pmax -> pmin)
+
 * color example added to plot.gam.Rd
 
 * bug fix in `smooth.construct.tensor.smooth.spec' - class "cyclic.smooth"
